--- a/eda.ipynb
+++ b/eda.ipynb
@@ -248,7 +248,7 @@
     }
    ],
    "source": [
-    "url =\"https://techassessment.blob.core.windows.net/aiap16-assessment-data/lung_cancer.db\"\n",
+    "url =\".db\"\n",
     "response = requests.get(url, stream = True)\n",
     "dest_folder = 'data'\n",
     "if not os.path.exists(dest_folder):\n",
